fix: Replace missing vite.svg with Baikal logo favicon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/baikal_logo_trans.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
-    <title>Figma Design System Generator</title>
+    <title>Baikal - Figma Design System Generator</title>
   </head>
   <body>
     <div id="root"></div>
